<resources>
    <string name="app_name">AutomaGREat</string>
    <string name="action_settings">Settings</string>
    <string name="enter_pin">Enter your PIN</string>
    <string name="error_empty_pin">This input requires a value!</string>
    <string name="error_wrong_pin">Wrong PIN</string>
    <string name="all_air">All A/C </string>
    <string name="all_lamp">All lamps</string>
    <string name="refresh">Refresh</string>
    <string name="set_intensity">Set intensity</string>
    <string name="set_color">Set color</string>
    <string name="textOff">off</string>
    <string name="textOn">on</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="pin">1234</string>
    <string name="temp_inicial">24</string>
    <string name="celsius">°C</string>
    <string name="no_temp">unavailable</string>
    <string name="ok">OK</string>
    <string name="dont_show_again">Dont show this message anymore</string>
    <string name="welcome">Welcome to AutomaGREat</string>
    <string name="welcome_message">You can control the lamps and the air
    conditioning devices of GREat Seminar Room in two ways: manually, by using
    the tabs on the top of the screen or you can let the AutomaGREat
    control them automatically for you. Please select the mode you prefer:</string>
    <string name="select_mode">Select Mode</string>
    <string name="manual">Manual</string>
    <string name="auto">Auto</string>​​
    <string name="manual_selected">Manual mode selected</string>
    <string name="auto_selected">Automatic mode selected</string>

</resources>
